# TunerAccess

./: .gitignore  CMakeLists.txt  MACOS_PORTING_GUIDE.md  README.md
.github/workflows/: macos-build.yml
Docs/: CHANGELOG.html  TunerAccess_Manual.html
Source/: AccessibleComboDropdown.cpp  AccessibleComboDropdown.h  AccessibleSettingsPanel.cpp  AccessibleSettingsPanel.h  CustomStandaloneApp.cpp  GuitarTuner.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  YinPitchDetector.h
installer/: TunerAccess.iss
installer/data/: EULA.txt  EULA_fr.txt
nvda_2025.3.3_controllerClient/arm64/: nvdaController.h
nvda_2025.3.3_controllerClient/x86/: nvdaController.h
